k8s/infrastructure/longhorn/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("longhorn.mchill.io")
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
      middlewares:
        - name: forward-auth
          namespace: traefik
